# Auto_Aim

./: CMakeLists.txt  README.md
inc/: Color_Capture.h  Control_Motor.h  Initialization.h  include.h  parameter.h
src/: Color_Capture.cpp  Control_Motor.cpp  Initialization .cpp  cscope.in.out  cscope.out  cscope.po.out  main.cpp  makefile  parameter.cpp  tags
